--- a/package.json
+++ b/package.json
@@ -7,15 +7,17 @@
   "license": "MIT",
   "scripts": {
     "test": "ava",
-    "build": "rimraf lib && babel src --out-dir lib"
+    "build": "rimraf lib && webpack --config webpack.config.js",
+    "prettier": "prettier --config .prettierrc --write \"src/*.js\""
   },
   "devDependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.2.2",
-    "@babel/preset-env": "^7.3.1",
-    "@babel/register": "^7.0.0",
-    "ava": "^1.2.0",
-    "rimraf": "^2.6.3"
+    "@babel/cli": "7.2.3",
+    "@babel/core": "7.2.2",
+    "@babel/preset-env": "7.3.1",
+    "@babel/register": "7.0.0",
+    "ava": "1.2.0",
+    "prettier": "1.16.3",
+    "rimraf": "2.6.3"
   },
   "ava": {
     "require": [
