--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "author": "mgmeyers <matthew.gregory.meyers@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "test": "ava",
     "build": "rimraf lib && webpack --config webpack.config.js",
-    "prettier": "prettier --config .prettierrc --write \"src/*.js\"",
-    "docs": "jsdoc2md src/*.js --plugin dmd-clear > doc.md"
+    "docs": "jsdoc2md src/*.js --plugin dmd-clear > README.md",
+    "lint": "eslint src/*.js",
+    "format": "prettier --config .prettierrc --write \"src/*.js\"",
+    "test": "ava",
+    "quality": "yarn format && yarn lint && yarn test"
   },
   "devDependencies": {
     "@babel/cli": "7.2.3",
@@ -18,6 +20,7 @@
     "@babel/register": "7.0.0",
     "ava": "1.2.0",
     "dmd-clear": "0.1.2",
+    "eslint": "^5.13.0",
     "jsdoc": "3.5.5",
     "jsdoc-to-markdown": "4.0.1",
     "prettier": "1.16.3",
