--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   ],
   "homepage": "https://github.com/mgmeyers/prop-ops",
   "license": "MIT",
-  "types": "./src/index.d.ts",
+  "types": "./index.d.ts",
   "scripts": {
     "build": "rimraf lib && babel src --out-dir lib",
     "docs": "jsdoc2md src/*.js > README.md",
